<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
            android:id="@+id/logo"
            android:layout_width="107dp"
            android:layout_height="48dp"
            android:layout_margin="16dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/pastiche_big_logo" />

    <ImageView
            android:id="@+id/userThumbnail"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:background="#222"
            android:contentDescription="@string/user_thumbnail"
            android:padding="10dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@id/plusSign"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_person_white" />

    <ImageView
            android:id="@+id/plusSign"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/plus"
            android:scaleType="fitCenter"
            android:tint="#222"
            app:layout_constraintBottom_toBottomOf="@id/userThumbnail"
            app:layout_constraintEnd_toStartOf="@id/artThumbnail"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintTop_toTopOf="@id/userThumbnail"
            app:layout_constraintVertical_bias="0.5"
            app:srcCompat="@drawable/ic_add" />

    <ImageView
            android:id="@+id/artThumbnail"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="#222"
            android:contentDescription="@string/art_thumbnail"
            android:padding="10dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_gallery_white" />

    <Space
            android:layout_width="match_parent"
            android:layout_height="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo" />


</androidx.constraintlayout.widget.ConstraintLayout>